@@ -1,3 +1,7 @@
+2017-07-27	Daniel Hawkins
+	* server/c_misc.c: Add damage per second calculation to "statistics"
+	  command.
+
 2017-07-24	Kevin Zheng
 	* server/attack.c: Play attack sounds on the map
 
